--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>2020中国应急救援创新设计大赛</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/stylish-portfolio.min.css" rel="stylesheet">
+  <link href="css/stylish-portfolio.css" rel="stylesheet">
 
 </head>
 
@@ -32,22 +32,28 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#">现在报名</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#page-top">Home</a>
+        <a class="js-scroll-trigger" href="#page-top">首页</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
+        <a class="js-scroll-trigger" href="#about">大赛介绍</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" href="#services">组织机构</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger" href="#category">作品范围</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" href="#prize">奖项设置</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#info">参赛须知</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#contact">联系方式</a>
       </li>
     </ul>
   </nav>
@@ -55,11 +61,14 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Stylish Portfolio</h1>
-      <h3 class="mb-5">
-        <em>A Free Bootstrap Theme by Start Bootstrap</em>
-      </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <h1 class="mb-2">2020</h1>
+      <h2 class="mb-auto">
+        中国应急救援 <br />
+        创新设计大赛
+      </h2>
+      <br />
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">马上报名</a>
+      <a class="btn btn-light btn-xl js-scroll-trigger" href="#about">了解更多</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -67,12 +76,14 @@
   <!-- About -->
   <section class="content-section bg-light" id="about">
     <div class="container text-center">
+      <div class="content-section-heading">
+        <h2 class="mb-5">大赛介绍</h2>
+      </div>
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-          <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+
+          <p class="lead mb-5 text-justify">2020年伊始，新型冠状病毒引发的肺炎疫情突发，全国进入全面抗疫阶段，并应急救援武汉等区域。应急救援管理是为了预防和控制潜在事故或紧急情况发生时，做出应急准备和响应。针对新型冠状病毒肺炎疫情，中共中央政治局常务委员会召开会议强调：“要针对疫情应对中暴露出来的短板和不足，健全国家应急管理体系，提高处理急难险重任务能力”。2月下旬，中国创新设计产业战略联盟提出“中国创新设计产业战略联盟助力企业疫情防控与复产复工的行动计划”。作为行动计划一部分，中国工程科技知识中心创新设计分中心和中国机械工程学会工业设计分会联合发起“2020中国应急救援创新设计大赛”。本次大赛属于大型公益活动，以“创新设计提升应急救援质量”为主题，针对疫情应对中出现的不足，结合我国突发自然灾害和公共安全事故现状，通过设计问题的发现与解决来更好地驱动应急救援产品与服务模式创新，从而提升应急救援的效率和质量。欢迎全国创新设计从业人员及爱好者踊跃参加，发挥自身设计特长，同心战疫。</a>!</p>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">查看组织机构</a>
         </div>
       </div>
     </div>
@@ -80,159 +91,203 @@
 
   <!-- Services -->
   <section class="content-section bg-primary text-white text-center" id="services">
-    <div class="container">
+    <div class="container col-lg-10 mx-auto">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">Services</h3>
-        <h2 class="mb-5">What We Offer</h2>
+<!--        <h3 class="text-secondary mb-0">Services</h3>-->
+        <h2 class="mb-5">组织机构</h2>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <div class="col-lg-10 mx-auto">
+<!--          <span class="service-icon rounded-circle mx-auto mb-3">-->
+<!--            <i class="icon-screen-smartphone"></i>-->
+<!--          </span>-->
+          <h3>
+            <strong>指导单位</strong>
+          </h3>
+          <p class="text-center">中国创新设计产业战略联盟</p>
+          <br />
+        </div>
+        <div class="col-lg-10 mx-auto">
+<!--          <span class="service-icon rounded-circle mx-auto mb-3">-->
+<!--            <i class="icon-pencil"></i>-->
+<!--          </span>-->
+          <h3>
+            <strong>主办单位</strong>
+          </h3>
+          <p class="text-center">中国工程科技知识中心创新设计分中心</p>
+          <p class="text-center">中国机械工程学会工业设计分会</p>
+          <br />
+        </div>
+        <div class="col-lg-10 mx-auto">
+<!--          <span class="service-icon rounded-circle mx-auto mb-3">-->
+<!--            <i class="icon-like"></i>-->
+<!--          </span>-->
+          <h3>
+            <strong>承办单位</strong>
+          </h3>
+          <p class="text-center">浙江省设计智能与数字创意研究重点实验室</p>
+          <p class="text-center">数字创意智能技术与装备浙江省工程研究中心</p>
+          <p class="text-center">浙江大学—香港理工大学国际设计中心</p>
+          <p class="text-center">浙江理工大学艺术与设计学院</p>
+          <p class="text-center">浙江大学台州研究院</p>
+          <br />
+        </div>
+        <br />
+        <div class="col-lg-8 mx-auto">
+<!--          <span class="service-icon rounded-circle mx-auto mb-3">-->
+<!--            <i class="icon-mustache"></i>-->
+<!--          </span>-->
+          <h3>
+            <strong>联合主办单位</strong>
+          </h3>
+          <p class="lead mb-5 text-justify">海上丝绸之路创新设计产业联盟、长三角创新设计产业联盟、京津冀经济区创新设计产业联盟、数字创意内容创新产业联盟、健康工程创新设计产业联盟、丝绸之路创新设计产业联盟、农业装备创新设计产业联盟、北京光华设计发展基金会、上海交通大学设计学院、同济大学设计与创意学院、清华大学美术学院健康医疗产业创新设计研究所、浙江大学工业设计系、湖南大学设计学院、北京理工大学设计与艺术学院、西南交通大学建筑与设计学院、陕西科技大学设计与艺术学院、南昌大学艺术与设计学院、江西财经大学艺术学院、江西师范大学美术学院、浙江工业大学工业设计研究院、杭州电子科技大学人文艺术与数字媒体学院、宁波和丰创意广场、浙江大学宁波理工学院传媒与设计学院、浙江大学—北斗航天联合创新设计工程中心、江西理工大学文法学院、温州商学院传媒与艺术设计学院、南昌工程学院人文与艺术学院、江西财经大学现代经济管理学院、中国矿业大学建筑与设计学院、南昌航空大学艺术与设计学院、华北科技学院、中国美术学院文创设计制造业协同创新中心、浙江工商大学艺术设计学院、浙江科技学院艺术设计学院、浙江大学城市学院创意与艺术设计学院、云南财经大学现代设计艺术学院、宁波大学潘天寿艺术设计学院、湖南工业大学包装设计艺术学院、山东新年政治学院设计艺术学院、中南林业科技大学家具与艺术设计学院、浙江省会展学会、全球征集网（名单持续更新）</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Category -->
+  <section class="content-section bg-light text-black-50 text-center" id="category">
+    <div class="container">
+      <div class="content-section-heading">
+        <h2 class="mb-5">大赛作品范围</h2>
+<!--        <h3 class="text-faded mb-0">实际产品和概念设计均可参赛，参赛作品分三个类别，包括产品设计类、服务设计类以及其他相关设计类。</h3>-->
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-screen-smartphone"></i>
           </span>
-          <h4>
-            <strong>Responsive</strong>
-          </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <h3>
+            <strong>产品设计</strong>
+          </h3>
+          <p class="text-justify mb-0">包括不同应急救援背景下救援装备、安全防护、公共设施以及生活用品的创新设计，重点关注在本次防疫过程或者企业复工复产中起到重大作用的装备及智能产品</p>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
-          <h4>
-            <strong>Redesigned</strong>
-          </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <h3>
+            <strong>服务设计</strong>
+          </h3>
+          <p class="text-justify mb-0">关注服务设计角度下灾前预警、灾中救援以及灾后重建工作和流程高效运转的设计解决方案，以及助力企业复产复工的相关产品、系统、平台和商业模式</p>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+        <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
-          <h4>
-            <strong>Favorited</strong>
-          </h4>
-          <p class="text-faded mb-0">Millions of users
-            <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
+          <h3>
+            <strong>其他相关设计</strong>
+          </h3>
+          <p class="text-justify mb-0">包括应急救援产品可用的新材料、新工艺，救援过程及灾后条件下的空间设计，以及特殊背景下情感述求的解决方案等相关设计</p>
+          <br />
         </div>
-        <div class="col-lg-3 col-md-6">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
-          </span>
-          <h4>
-            <strong>Question</strong>
-          </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Prize -->
+  <section class="content-section bg-dark text-white-50" id="prize">
+    <div class="container text-center">
+      <div class="content-section-heading">
+        <h2 class="mb-5">奖项设置</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+
+          <p class="lead mb-5 text-justify">每类作品设一等奖1项，二等奖3项，三等奖5项，优秀奖若干。此外，设立最佳组织奖及优秀组织奖，对组织和参与大赛活动成效突出的学校或机构予以表彰。</p>
+          <p class="lead mb-5 text-justify">所有优秀作品入选中国工程科技知识中心创新设计知识服务系统平台，并颁发入选证书。评审出的获奖作品由海上丝绸之路创新设计产业联盟等机构推荐参评本年度“好设计”奖。“好设计”奖由中国创新设计产业战略联盟、中国工程院中国工程科技知识中心、中国机械工程学会等单位于2015年设立，2017年在国家科学技术奖励办公室备案登记，编号为0283。</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Info -->
+  <section class="content-section bg-info text-white text-center" id="info">
+    <div class="container col-lg-8mx-auto">
+      <div class="content-section-heading">
+        <!--        <h3 class="text-secondary mb-0">Services</h3>-->
+        <h2 class="mb-5">参赛须知</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h3>
+            <strong>参赛资格</strong>
+          </h3>
+          <p class="text-justify">大赛以个人或团队为参赛单位，参赛对象包括高校、设计机构、制造企业、职业设计师和设计爱好者，同一参赛单位可提交多个参赛作品。</p>
+          <br />
+        </div>
+        <div class="col-lg-8 mx-auto">
+          <h3>
+            <strong>大赛时间安排</strong>
+          </h3>
+          <p class="text-justify"><b>3月1日-5月15日</b>征集参赛作品。<b>5月20日</b>大赛作品评审。</p>
+          <br />
+        </div>
+        <div class="col-lg-8 mx-auto">
+          <h3>
+            <strong>作品要求</strong>
+          </h3>
+          <p class="text-justify">1) 参赛作品应符合大赛主题，突出创新性、智能化，并具有文化、科技、社会价值和人文关怀等特征，同时兼顾理念新颖性及工程可行性。</p>
+          <p class="text-justify">2) 作品须是参赛者原创作品（不得侵犯第三人的知识产权）。</p>
+          <p class="text-justify">3) 作品知识产权归参赛者所有，大赛主办方有对作品进行展示、宣传、推广、出版等权利。</p>
+          <br />
         </div>
       </div>
     </div>
   </section>
 
   <!-- Callout -->
-  <section class="callout">
+  <section class="callout text-light" id="participate">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Welcome to
-        <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+      <h2 class="col-lg-8 col-lg-6 mx-auto">诚挚的邀请您参赛!</h2>
+      <br />
+      <a class="btn btn-primary btn-xl" href="#">报名参赛</a>
     </div>
-  </section>
-
-  <!-- Portfolio -->
-  <section class="content-section" id="portfolio">
-    <div class="container">
-      <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Portfolio</h3>
-        <h2 class="mb-5">Recent Projects</h2>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-      <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-      <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
-    </div>
-  </section>
-
-  <!-- Map -->
-  <section id="contact" class="map">
-    <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-    <br />
-    <small>
-      <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-    </small>
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center" id="contact">
     <div class="container">
-      <ul class="list-inline mb-5">
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-facebook"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#">
-            <i class="icon-social-github"></i>
-          </a>
-        </li>
-      </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2019</p>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-briefcase"></i>
+          </span>
+          <p class="text-left mb-0">系统支持：中国工程科技知识中心创新设计分中心</p>
+          <p class="text-left mb-0">地址：浙江省杭州市西湖区浙大路38号，浙江大学玉泉校区曹光彪高科技大楼东楼101室</p>
+          <p class="text-left mb-0">联系人：叶晓云&nbsp;&nbsp;&nbsp;&nbsp;电话：13858023346</p>
+          <p class="text-left mb-0">联系人：朱&nbsp;&nbsp;&nbsp;&nbsp;军&nbsp;&nbsp;&nbsp;&nbsp;电话：15967164645</p>
+        </div>
+        <div class="col-lg-6 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-compass"></i>
+          </span>
+          <p class="text-justify mb-0">2020中国应急救援创新设计大赛秘书处办公室</p>
+          <p class="text-justify mb-0">地址：浙江杭州下沙高教园区2号大街928号，浙江理工大学艺术与设计学院，21-B210</p>
+          <p class="text-justify mb-0">联系人：吴&nbsp;&nbsp;&nbsp;&nbsp;群&nbsp;&nbsp;&nbsp;&nbsp;电话：18658165716</p>
+          <p class="text-justify mb-0">联系人：虞宇翔&nbsp;&nbsp;&nbsp;&nbsp;电话：15857135716</p>
+        </div>
+
+      </div>
+      <br />
+      <p class="text-justify col-lg-12">更多赛事信息请关注中国工程科技知识中心创新设计分中心及中国创新设计产业战略联盟公众号，或通过赛事交流微信群实时沟通。</p>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+          <img src="./img/code-dsgn.png" alt="center"/>
+          <p class="text-center">中国工程科技知识中心创新设计分中心</p>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+          <img src="./img/code-idac.png" alt="center"/>
+          <p class="text-center">中国创新设计产业战略联盟</p>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+          <img src="./img/code-com.png" alt="center"/>
+          <p class="text-center">赛事交流微信群</p>
+        </div>
+      </div>
+      <br />
+      <p class="text-muted small mb-0">Copyright &copy; 中国工程科技知识中心创新设计分中心 2020</p>
     </div>
   </footer>
 
