add rules to index.html.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a class="js-scroll-trigger" href="#prize">奖项设置</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#info">参赛须知</a>
+        <a class="js-scroll-trigger" href="#rules">参赛规则</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#contact">联系方式</a>
@@ -202,12 +202,12 @@
     </div>
   </section>
 
-  <!-- Info -->
-  <section class="content-section bg-info text-white text-center" id="info">
+  <!-- Rules -->
+  <section class="content-section bg-info text-white text-center" id="rules">
     <div class="container col-lg-8mx-auto">
       <div class="content-section-heading">
         <!--        <h3 class="text-secondary mb-0">Services</h3>-->
-        <h2 class="mb-5">参赛须知</h2>
+        <h2 class="mb-5">参赛规则</h2>
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -233,6 +233,32 @@
           <p class="text-justify">3) 作品知识产权归参赛者所有，大赛主办方有对作品进行展示、宣传、推广、出版等权利。</p>
           <br />
         </div>
+        <div class="col-lg-8 mx-auto">
+          <h3>
+            <strong>作品提交</strong>
+          </h3>
+          <p class="text-justify">1) 作品展示排版JPG格式电子文件不多于3幅，版面为横向排版，A3大小且分辨率不低于300dpi。</p>
+          <p class="text-justify">2) 作品电子文件应包含以下内容：设计主题、三维效果图、产品三视图及尺寸、使用情境及结构细节表现等，并配有必要的文字叙述和对应原理介绍。</p>
+          <p class="text-justify">3) 版面内除标注作品名称外，不得出现作者姓名和与作者相关的其它信息。</p>
+          <p class="text-justify">4) 为不影响文件上传，注意作品文件的整体大小不超过10M。</p>
+          <br />
+        </div>
+        <div class="col-lg-8 mx-auto">
+          <h3>
+            <strong>作品投递</strong>
+          </h3>
+          <p class="text-justify">1) 参赛作品以大赛专题的报名系统进行投递，参赛人员需点击进入报名系统，并填写相关参赛信息和按要求上传作品。</p>
+          <p class="text-justify">2) 如因其他原因未能通过报名系统提交的，可以通过邮件方式投递。大赛邮箱：idac2020@126.com</p>
+          <p class="text-justify">3) 如有其他问题请<a href="#contact" class="text-white"><strong>联系</strong></a>大赛秘书处办公室。</p>
+          <br />
+        </div>
+        <div class="col-lg-8 mx-auto">
+          <h3>
+            <strong>评审委员会组成办法</strong>
+          </h3>
+          <p class="text-justify">大赛组委会设评审委员会，构成人员包括联合主办单位代表、企业代表以及相关行业代表等，按照评审规则、评审细则和分工，负责各评审阶段参赛项目的评判和打分，负责处理竞赛和评审过程中的行业、专业和技术等相关问题。</p>
+          <br />
+        </div>
       </div>
     </div>
   </section>
@@ -255,18 +281,19 @@
             <i class="icon-briefcase"></i>
           </span>
           <p class="text-left mb-0">系统支持：中国工程科技知识中心创新设计分中心</p>
-          <p class="text-left mb-0">地址：浙江省杭州市西湖区浙大路38号，浙江大学玉泉校区曹光彪高科技大楼东楼101室</p>
+          <p class="text-left mb-0">地　址：浙江省杭州市西湖区浙大路38号，浙江大学玉泉校区曹光彪高科技大楼东楼101室</p>
           <p class="text-left mb-0">联系人：叶晓云&nbsp;&nbsp;&nbsp;&nbsp;电话：13858023346</p>
-          <p class="text-left mb-0">联系人：朱&nbsp;&nbsp;&nbsp;&nbsp;军&nbsp;&nbsp;&nbsp;&nbsp;电话：15967164645</p>
+          <p class="text-left mb-0">联系人：朱　军&nbsp;&nbsp;&nbsp;&nbsp;电话：15967164645</p>
         </div>
         <div class="col-lg-6 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-compass"></i>
           </span>
           <p class="text-justify mb-0">2020中国应急救援创新设计大赛秘书处办公室</p>
-          <p class="text-justify mb-0">地址：浙江杭州下沙高教园区2号大街928号，浙江理工大学艺术与设计学院，21-B210</p>
-          <p class="text-justify mb-0">联系人：吴&nbsp;&nbsp;&nbsp;&nbsp;群&nbsp;&nbsp;&nbsp;&nbsp;电话：18658165716</p>
+          <p class="text-justify mb-0">地　址：浙江杭州下沙高教园区2号大街928号，浙江理工大学艺术与设计学院，21-B210</p>
+          <p class="text-justify mb-0">联系人：吴　群&nbsp;&nbsp;&nbsp;&nbsp;电话：18658165716</p>
           <p class="text-justify mb-0">联系人：虞宇翔&nbsp;&nbsp;&nbsp;&nbsp;电话：15857135716</p>
+          <p class="text-justify mb-0">邮　箱：idac2020@126.com</p>
         </div>
 
       </div>
