update index.html and communication codebar.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#">现在报名</a>
+        <a class="js-scroll-trigger" href="/competition/u/signup">现在报名</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">首页</a>
@@ -67,7 +67,7 @@
         创新设计大赛
       </h2>
       <br />
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">马上报名</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="/competition/u/signup">马上报名</a>
       <a class="btn btn-light btn-xl js-scroll-trigger" href="#about">了解更多</a>
     </div>
     <div class="overlay"></div>
@@ -238,7 +238,7 @@
             <strong>作品提交</strong>
           </h3>
           <p class="text-justify">1) 作品展示排版JPG格式电子文件不多于3幅，版面为横向排版，A3大小且分辨率不低于300dpi。</p>
-          <p class="text-justify">2) 作品电子文件应包含以下内容：设计主题、三维效果图、产品三视图及尺寸、使用情境及结构细节表现等，并配有必要的文字叙述和对应原理介绍。</p>
+          <p class="text-justify">2) 产品设计类作品电子文件应包含：报名表、不多于3幅的作品版面（内容包括设计主题、三维效果图、产品三视图及尺寸、使用情境及结构细节表现等，并配有必要的文字叙述和对应原理介绍）、介绍性视频（自行选择添加）；服务设计类作品电子文件应包含：报名表、不多于5幅的作品版面（内容包括用户旅程、服务蓝图、利益相关者图、系统框架等服务模式与内容创新的具体解决方案，以及服务系统其他相关说明）、介绍性视频（自行选择添加）；其他设计类可参考产品设计类和服务设计类提交。</p>
           <p class="text-justify">3) 版面内除标注作品名称外，不得出现作者姓名和与作者相关的其它信息。</p>
           <p class="text-justify">4) 为不影响文件上传，注意作品文件的整体大小不超过10M。</p>
           <br />
@@ -268,7 +268,7 @@
     <div class="container text-center">
       <h2 class="col-lg-8 col-lg-6 mx-auto">诚挚的邀请您参赛!</h2>
       <br />
-      <a class="btn btn-primary btn-xl" href="#">报名参赛</a>
+      <a class="btn btn-primary btn-xl" href="/competition/u/signup">报名参赛</a>
     </div>
   </section>
 
@@ -289,11 +289,11 @@
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-compass"></i>
           </span>
-          <p class="text-justify mb-0">2020中国应急救援创新设计大赛秘书处办公室</p>
-          <p class="text-justify mb-0">地　址：浙江杭州下沙高教园区2号大街928号，浙江理工大学艺术与设计学院，21-B210</p>
-          <p class="text-justify mb-0">联系人：吴　群&nbsp;&nbsp;&nbsp;&nbsp;电话：18658165716</p>
-          <p class="text-justify mb-0">联系人：虞宇翔&nbsp;&nbsp;&nbsp;&nbsp;电话：15857135716</p>
-          <p class="text-justify mb-0">邮　箱：idac2020@126.com</p>
+          <p class="text-left mb-0">2020中国应急救援创新设计大赛秘书处办公室</p>
+          <p class="text-left mb-0">地　址：浙江杭州下沙高教园区2号大街928号，浙江理工大学艺术与设计学院，21-B210</p>
+          <p class="text-left mb-0">联系人：吴　群&nbsp;&nbsp;&nbsp;&nbsp;电话：18658165716</p>
+          <p class="text-left mb-0">联系人：虞宇翔&nbsp;&nbsp;&nbsp;&nbsp;电话：15857135716</p>
+          <p class="text-left mb-0">邮　箱：idac2020@126.com</p>
         </div>
 
       </div>
@@ -309,7 +309,7 @@
           <p class="text-center">中国创新设计产业战略联盟</p>
         </div>
         <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-          <img src="./img/code-com.png" alt="center"/>
+          <img src="img/code-com-update.png" alt="center"/>
           <p class="text-center">赛事交流微信群</p>
         </div>
       </div>
