add a alert.html and time's up pic.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="/competition/u/signup">现在报名</a>
+        <a class="js-scroll-trigger" href="alert.html">现在报名</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">首页</a>
@@ -67,7 +67,7 @@
         创新设计大赛
       </h2>
       <br />
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="/competition/u/signup">马上报名</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="alert.html">马上报名</a>
       <a class="btn btn-light btn-xl js-scroll-trigger" href="#about">了解更多</a>
     </div>
     <div class="overlay"></div>
@@ -268,7 +268,7 @@
     <div class="container text-center">
       <h2 class="col-lg-8 col-lg-6 mx-auto">诚挚的邀请您参赛!</h2>
       <br />
-      <a class="btn btn-primary btn-xl" href="/competition/u/signup">报名参赛</a>
+      <a class="btn btn-primary btn-xl" href="alert.html">报名参赛</a>
     </div>
   </section>
 
